--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         <main>
             <header>
                 <h1 class="heading1"><span class="lil">Lil</span> Peep</h1>
+                <nav>
+                    <ul class="main-nav">
+                        <li class="main-nav__item">Home</li>
+                        <li class="main-nav__item">Biography</li>
+                        <li class="main-nav__item">Albums</li>
+                        <li class="main-nav__item">EP's</li>
+                        <li class="main-nav__item">Best Known Songs</li>
+                        <li class="main-nav__item">Pictures</li>
+                    </ul>
+                </nav>
             </header>
             <div> <!--We're creating a couple forms down here-->
                 <section>
