Adding styles to NAV & finxing HTML spelling classes

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <body>
         <main>
             <header>
-                <h1 class="heading1"><span class="lil">Lil</span> Peep</h1>
+                <h1 class="main-header__heading"><span class="main-header__heading--lil">Lil</span> Peep</h1>
                 <nav>
                     <ul class="main-nav">
-                        <li class="main-nav__item">Home</li>
-                        <li class="main-nav__item">Biography</li>
-                        <li class="main-nav__item">Albums</li>
-                        <li class="main-nav__item">EP's</li>
-                        <li class="main-nav__item">Best Known Songs</li>
-                        <li class="main-nav__item">Pictures</li>
+                        <li class="main-nav__item"><a href="#">Home</a></li>
+                        <li class="main-nav__item"><a href="#">Biography</a></li>
+                        <li class="main-nav__item"><a href="#">Albums</a></li>
+                        <li class="main-nav__item"><a href="#">EP's</a></li>
+                        <li class="main-nav__item"><a href="#">Best Known Songs</a></li>
+                        <li class="main-nav__item"><a href="#">Pictures</a></li>
                     </ul>
                 </nav>
             </header>
