--- a/index.html
+++ b/index.html
@@ -26,30 +26,8 @@
                     </ul>
                 </nav>
             </header>
-            <div> <!--We're creating a couple forms down here-->
-                <section>
-                    <h3>Enter your birthday and participate for a free ticket!</h3>
-                    <form action=""> 
-                        <label for="birthday">
-                            <span>Your birthday</span>
-                            <input type="datetime-local" id="birthday" name="birthday">
-                        </label>
-                        <input type="submit" value="Submit">
-                    </form>
-                </section>
-                
-                <section>
-                    <h3>Schedule your ticket for his show!</h3>
-                    <form action="" autocomplete="one-time-code" target="_self">
-                        <label for="name">
-                            <span>What's your name?</span>
-                            <input type="text" name="name" id="name" autocomplete="name" placeholder="Write your name" required>
-                        </label>
-                        <input type="submit" value="Submit">
-                    </form>
-                </section>
-            </div>
-            <div>
+
+            <div class="albums">
                 <ul>
                     <h3>Albums</h3>
                     <section>
@@ -66,9 +44,9 @@
                             <figcaption><b><i><small>Crybaby Album Cover</small></i></b></figcaption>
                         </figure>
                         <aside>
-                            <label for="crybaby-songs"> 
+                            <label for="albums-crybaby__select"> 
                                 <p>What's your favorite song from this album?</p>
-                                <select id="crybaby-songs" name="crybaby-songs">
+                                <select id="albums-crybaby__select" name="crybaby-song">
                                     <option value="crybaby">crybaby</option>
                                     <option value="lil jeep">lil jeep</option>
                                     <option value="yesterday">yesterday</option>
@@ -99,10 +77,10 @@
                             <figcaption><b><i><small>Hellboy Album Cover</small></i></b></figcaption>
                         </figure>
                         <aside>
-                            <label for="hellboy-song"></label>
+                            <label for="albums-hellboy__input"></label>
                             <p>What's your favorite song from this album?</p>
-                            <input type="text" list="hellboy-songs" id="hellboy-song" name="hellboy-songs">
-                            <datalist id="hellboy-songs">
+                            <input type="text" id="albums-hellboy__input" name="hellboy-song" list="albums-hellboy__songs">
+                            <datalist id="albums-hellboy__songs">
                                 <option value="bellboy"></option>
                                 <option value="drive by"></option>
                                 <option value="OMFG"></option>
@@ -138,9 +116,9 @@
                             <figcaption><b><i><small>Come Over When You're Sober Pt.1 Album Cover</small></i></b></figcaption>
                         </figure>
                         <aside>
-                            <label for="COWYSpt1-songs">
+                            <label for="albums-cowyspt1__select">
                                 <p>What's your favorite song from this album?</p>
-                                <select id="COWYSpt1-songs" name="COWYSpt1-songs">
+                                <select id="albums-cowyspt1__select" name="cowyspt1-song">
                                     <option value="Benz Truck">Benz Truck</option>
                                     <option value="Save That Shit">Save That Shit</option>
                                     <option value="Awful Things">Save That Shit</option>
@@ -167,10 +145,10 @@
                             </a>
                             <figcaption><b><i><small>Come Over When You're Sober Pt.2 Album Cover</small></i></b></figcaption>
                         </figure>
-                        <label for="COWYSpt2-song"></label>
+                        <label for="albums-cowyspt2__input"></label>
                         <p>What's your favorite song from this album?</p>
-                        <input type="text" list="COWYSpt2-songs" id="COWYSpt2-song" name="COWYSpt2-songs">
-                        <datalist id="COWYSpt2-songs">
+                        <input type="text" id="albums-cowyspt2__input" name="cowyspt2-song" list="albums-cowyspt2__songs">
+                        <datalist id="albums-cowyspt2__songs">
                             <option value="Broken Smile (My All)"></option>
                             <option value="Runaway"></option>
                             <option value="Sex with My Ex"></option>
@@ -201,9 +179,9 @@
                             </a>
                             <figcaption><b><i><small>Everybody's Everything Album cover</small></i></b></figcaption>
                         </figure>
-                        <label for="Everybody's-Everything-songs">
+                        <label for="albums-everybody's_everything__select">
                             <p>What's your favorite song from this album?</p>
-                            <select id="Everybody's-Everything-songs" name="Everybody's-Everything-songs">
+                            <select id="albums-everybody's_everything__select" name="everybody's_everything-song">
                                 <option value="Broken Smile (My All)">Broken Smile (My All)</option>
                                 <option value="Runaway">Runaway</option>
                                 <option value="Sex with My Ex">Sex with My Ex</option>
