Fixing BEM classes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </head>
     <body>
         <main>
-            <header>
-                <h1 class="header__heading"><span class="header__heading--lil">Lil</span> Peep</h1>
+            <header class="header">
+                <h1 class="header__heading"><span class="header__heading--color-pink">Lil</span> Peep</h1>
                 <nav>
                     <ul class="header__nav">
                         <li class="header__nav__item"><a href="#">Home</a></li>
