--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <main>
             <header class="header">
-                <h1 class="header__heading"><span class="color-pink">LIL</span> PEEP</h1>
+                <h1 class="header__heading"><span class="color-pink">LiL</span> PEEP</h1>
                 <nav>
                     <ul class="header__nav">
                         <li class="header__nav__item"><a href="#">Home</a></li>
