Blue Background & Fonts

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <img
                                     src="./Imgs/crybaby.png"
                                     alt="Crybaby Album Cover; A drawing of a white bird crying while holding a ribbon that says: Cry Baby"
-                                    width="420">
+                                    height="420">
                             </a>
                             <figcaption><b><i><small>Crybaby Album Cover</small></i></b></figcaption>
                         </figure>
@@ -213,7 +213,7 @@
                 </li>
                 <li>
                     <a href="https://twitter.com/Lilpeep" target="_blank">
-                        <img src="./Imgs/twitter.png" alt="Twitter logo" width="25">
+                        <img src="./Imgs/tw.png" alt="Twitter logo" width="25">
                         <span>Twitter</span>
                     </a>
                 </li>
