Default Margin & Padding to 0. Styles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <section class="albums">
                 <ul class="albums__list">
-                    <h3>Albums</h3>
+                    <h3><span class="color-pink">A</span>L<span class="color-pink">B</span>U<span class="color-pink">M</span>S</h3>
                     <article>
                         <li>
                             <h2 class="albums__title">Crybaby</h2> <!--Crybaby Album-->
@@ -39,13 +39,14 @@
                                 <img
                                     src="./Imgs/crybaby.png"
                                     alt="Crybaby Album Cover; A drawing of a white bird crying while holding a ribbon that says: Cry Baby"
-                                    height="420">
+                                    width="420"
+                                    class="albums__image">
                             </a>
-                            <figcaption><b><i><small>Crybaby Album Cover</small></i></b></figcaption>
+                            <figcaption class="albums__image__caption"><b><i><small>Crybaby Album Cover</small></i></b></figcaption>
                         </figure>
                         <aside>
                             <label for="albums-crybaby__songs"> 
-                                <p>What's your favorite song from this album?</p>
+                                <p class="albums__question">What's your favorite song from this album?</p>
                                 <select class="albums__select" id="albums-crybaby__songs" name="crybaby-song">
                                     <option value="crybaby">crybaby</option>
                                     <option value="lil jeep">lil jeep</option>
@@ -72,13 +73,14 @@
                                 <img
                                 src="./Imgs/hellboy.png"
                                 alt="Hellboy Album Cover; Lil Peep with pink hair, wearing a red New Jersey t-shirt, and looking down while standing in front of a red door"
-                                width="420">
+                                width="420"
+                                class="albums__image">
                             </a>
-                            <figcaption><b><i><small>Hellboy Album Cover</small></i></b></figcaption>
+                            <figcaption class="albums__image__caption"><b><i><small>Hellboy Album Cover</small></i></b></figcaption>
                         </figure>
                         <aside>
                             <label for="albums-hellboy__songs">
-                                <p>What's your favorite song from this album?</p>
+                                <p class="albums__question">What's your favorite song from this album?</p>
                                 <select class="albums__select" id="albums-hellboy__songs">
                                     <option value="hellboy">hellboy</option>
                                     <option value="drive by">drive by</option>
@@ -111,13 +113,14 @@
                                 <img
                                 src="./Imgs/come over pt1.png"
                                 alt="Come Over When You're Sober Pt.1 Album Cover; Lil Peep lying on a messy bed that has 'Come Over When You're Sober' written on it with lipstick. He's shirtless, showing off his multiple tattoos, and smoking a cigarette"
-                                width="420">
+                                width="420"
+                                class="albums__image">
                             </a>
-                            <figcaption><b><i><small>Come Over When You're Sober Pt.1 Album Cover</small></i></b></figcaption>
+                            <figcaption class="albums__image__caption"><b><i><small>Come Over When You're Sober Pt.1 Album Cover</small></i></b></figcaption>
                         </figure>
                         <aside>
                             <label for="albums-cowyspt1__songs">
-                                <p>What's your favorite song from this album?</p>
+                                <p class="albums__question">What's your favorite song from this album?</p>
                                 <select class="albums__select" id="albums-cowyspt1__songs" name="cowyspt1-song">
                                     <option value="Benz Truck">Benz Truck</option>
                                     <option value="Save That Shit">Save That Shit</option>
@@ -141,12 +144,13 @@
                                 <img
                                 src="./Imgs/come over p2.png"
                                 alt="Come Over When You're Sober Pt.2 Album Cover; Lil Peep by a window, looking through it, leaning against a wall that has some funny pictures and 'Come Over When You're Sober' written on it. He's shirtless, showing off his multiple tattoos"
-                                    width="420">
+                                    width="420"
+                                    class="albums__image">
                             </a>
-                            <figcaption><b><i><small>Come Over When You're Sober Pt.2 Album Cover</small></i></b></figcaption>
+                            <figcaption class="albums__image__caption"><b><i><small>Come Over When You're Sober Pt.2 Album Cover</small></i></b></figcaption>
                         </figure>
                         <label for="albums-cowyspt2__songs">
-                            <p>What's your favorite song from this album?</p>
+                            <p class="albums__question">What's your favorite song from this album?</p>
                             <select class="albums__select" id="albums-cowyspt2__songs">
                                 <option value="Broken Smile">Broken Smile</option>
                                 <option value="Runaway">Runaway</option>
@@ -175,12 +179,13 @@
                                 <img
                                 src="./Imgs/everybodyseverything.png"
                                 alt="Everybody's Everything Album Cover; Lil Peep's face from the nose up, looking directly at the camera"
-                                width="420">
+                                width="420"
+                                class="albums__image">
                             </a>
-                            <figcaption><b><i><small>Everybody's Everything Album cover</small></i></b></figcaption>
+                            <figcaption class="albums__image__caption"><b><i><small>Everybody's Everything Album cover</small></i></b></figcaption>
                         </figure>
                         <label for="albums-everybodys_everything__songs">
-                            <p>What's your favorite song from this album?</p>
+                            <p class="albums__question">What's your favorite song from this album?</p>
                             <select class="albums__select" id="albums-everybodys_everything__songs" name="everybody's_everything-song">
                                 <option value="Broken Smile (My All)">Broken Smile (My All)</option>
                                 <option value="Runaway">Runaway</option>
@@ -203,7 +208,7 @@
             </section>
         </main>
         <footer>
-            <h3>Lil Peep's social media</h3>
+            <h4><span class="color-pink">Lil</span> Peep's <span class="color-pink">social</span> media</h4>
             <ul>
                 <li>
                     <a href="https://www.instagram.com/lilpeep/" target="_blank" >
