Modifying styles and using 'rem' as easure

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <body>
         <main>
             <header class="header">
-                <h1 class="header__heading"><span class="color-pink">LiL</span> PEEP</h1>
-                <nav>
-                    <ul class="header__nav">
+                <h1 class="header__heading"><span class="black-shadow">Lil </span><span class="color-violet">PEEP</span></h1>
+                <nav class="header__nav">
+                    <ul>
                         <li class="header__nav__item"><a href="#">Home</a></li>
                         <li class="header__nav__item"><a href="#">Biography</a></li>
                         <li class="header__nav__item"><a href="#">Albums</a></li>
@@ -46,7 +46,7 @@
                         </figure>
                         <aside>
                             <label for="albums-crybaby__songs"> 
-                                <p class="albums__question">What's your favorite song from this album?</p>
+                                <h4 class="albums__question color-violet">What's your favorite song from this album?</h4>
                                 <select class="albums__select" id="albums-crybaby__songs" name="crybaby-song">
                                     <option value="crybaby">crybaby</option>
                                     <option value="lil jeep">lil jeep</option>
@@ -80,7 +80,7 @@
                         </figure>
                         <aside>
                             <label for="albums-hellboy__songs">
-                                <p class="albums__question">What's your favorite song from this album?</p>
+                                <h4 class="albums__question color-violet">What's your favorite song from this album?</h4>
                                 <select class="albums__select" id="albums-hellboy__songs">
                                     <option value="hellboy">hellboy</option>
                                     <option value="drive by">drive by</option>
@@ -120,7 +120,7 @@
                         </figure>
                         <aside>
                             <label for="albums-cowyspt1__songs">
-                                <p class="albums__question">What's your favorite song from this album?</p>
+                                <h4 class="albums__question color-violet">What's your favorite song from this album?</h4>
                                 <select class="albums__select" id="albums-cowyspt1__songs" name="cowyspt1-song">
                                     <option value="Benz Truck">Benz Truck</option>
                                     <option value="Save That Shit">Save That Shit</option>
@@ -150,7 +150,7 @@
                             <figcaption class="albums__image__caption"><b><i><small>Come Over When You're Sober Pt.2 Album Cover</small></i></b></figcaption>
                         </figure>
                         <label for="albums-cowyspt2__songs">
-                            <p class="albums__question">What's your favorite song from this album?</p>
+                            <h4 class="albums__question color-violet">What's your favorite song from this album?</h4>
                             <select class="albums__select" id="albums-cowyspt2__songs">
                                 <option value="Broken Smile">Broken Smile</option>
                                 <option value="Runaway">Runaway</option>
@@ -185,7 +185,7 @@
                             <figcaption class="albums__image__caption"><b><i><small>Everybody's Everything Album cover</small></i></b></figcaption>
                         </figure>
                         <label for="albums-everybodys_everything__songs">
-                            <p class="albums__question">What's your favorite song from this album?</p>
+                            <h4 class="albums__question color-violet">What's your favorite song from this album?</h4>
                             <select class="albums__select" id="albums-everybodys_everything__songs" name="everybody's_everything-song">
                                 <option value="Broken Smile (My All)">Broken Smile (My All)</option>
                                 <option value="Runaway">Runaway</option>
@@ -208,7 +208,7 @@
             </section>
         </main>
         <footer>
-            <h4><span class="color-pink">Lil</span> Peep's <span class="color-pink">social</span> media</h4>
+            <h4><span class="color-pink">Lil</span> Peep<span class="color-pink">'</span>s <span class="color-pink">social</span> media</h4>
             <ul>
                 <li>
                     <a href="https://www.instagram.com/lilpeep/" target="_blank" >
