--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <body>
         <main>
             <header class="header">
-                <h1 class="header__heading"><span class="color-pink">LiL</span> PEEP</h1>
-                <nav>
-                    <ul class="header__nav">
+                <h1 class="header__heading"><span class="violet-shadow">Lil </span><span class="color-violet">PEEP</span></h1>
+                <nav class="header__nav">
+                    <ul>
                         <li class="header__nav__item"><a href="#">Home</a></li>
                         <li class="header__nav__item"><a href="#">Biography</a></li>
                         <li class="header__nav__item"><a href="#">Albums</a></li>
