Switching from 'px' to 'rem'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <main>
             <header class="header">
-                <h1 class="header__heading"><span class="black-shadow">Lil </span><span class="color-violet">PEEP</span></h1>
+                <h1 class="header__heading"><span class="violet-shadow">Lil </span><span class="color-violet">PEEP</span></h1>
                 <nav class="header__nav">
                     <ul>
                         <li class="header__nav__item"><a href="#">Home</a></li>
